force-app/main/default/objects/Enclosure__c/Enclosure__c.object-meta.xml
<CustomObject>
    <description>Object to track enclosures/cages in the zoo</description>
    <label>Enclosure</label>
    <nameField>
        <label>Enclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>