force-app/main/default/objects/Enclosure__c/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desert</fullName>
            </value>
            <value>
                <fullName>Tropical</fullName>
            </value>
            <value>
                <fullName>Savanna</fullName>
            </value>
            <value>
                <fullName>Arctic</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Aquatic</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>