force-app/main/default/objects/Enclosure__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Wing</fullName>
            </value>
            <value>
                <fullName>South Wing</fullName>
            </value>
            <value>
                <fullName>East Wing</fullName>
            </value>
            <value>
                <fullName>West Wing</fullName>
            </value>
            <value>
                <fullName>Central Area</fullName>
            </value>
            <value>
                <fullName>Aquatic Zone</fullName>
            </value>
            <value>
                <fullName>Aviary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>