force-app/main/default/objects/Enclosure__c/fields/Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status__c</fullName>
    <label>Maintenance Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
                <default>true</default>
                <label>Operational</label>
            </value>
            <value>
                <fullName>Needs Maintenance</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Out of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>